src/objects/Round_Robin_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Last_Number_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This number will be updated by the Round Robin code and will show the last Round Robin Number used to assign a record for the given Queue.</description>
        <inlineHelpText>This number will be updated by the Round Robin code and will show the last Round Robin Number used to assign a record for the given Queue.</inlineHelpText>
        <label>Last Number Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>The API name of the Object his queue is used for Round Robin assignment</description>
        <inlineHelpText>The API name of the Object his queue is used for Round Robin assignment</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>The name (Label) of the queue a record may be assigned to using Assignment rules which Round Robin logic will then re-assign</description>
        <inlineHelpText>The name (Label) of the queue a record may be assigned to using Assignment rules which Round Robin logic will then re-assign</inlineHelpText>
        <label>Queue Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Round Robin Settings</label>
</CustomObject>